<resources>
    <string name="app_name">Battle World</string>
    <string name="name_transaction">Exchange</string>
    <string name="name_social">Social</string>
    <string name="name_game">Game</string>
    <string name="name_money">Wallet</string>
    <string name="name_my">My</string>
    <string name="sex_man">Man</string>
    <string name="sex_woman">Woman</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_traditional">繁体中文</string>
    <string name="language_english">English</string>
    <string name="my_identity">Identity authentication</string>
    <string name="my_list">My order</string>
    <string name="my_safe">Security Centre</string>
    <string name="my_pay">Mode of collection</string>
    <string name="my_visit">Invitation</string>
    <string name="my_user">Node architecture</string>
    <string name="my_about">About us</string>
    <string name="my_feedback">User feedback</string>
    <string name="my_setting">System Settings</string>
    <string name="identity_common">The primary authentication</string>
    <string name="identity_high">Advanced Certification</string>
    <string name="common_name">Real name</string>
    <string name="common_name_hint">Please enter your real name</string>
    <string name="common_number">ID number</string>
    <string name="common_code_hint">Please enter your ID number</string>
    <string name="common_takepic_tv">Please bring out your valid second generation ID for the shoot</string>
    <string name="common_front">Front of ID card</string>
    <string name="common_negative">Reverse of identity card</string>
    <string name="safe_number">Binding Cell Phone</string>
    <string name="safe_email">Binding Mailbox</string>
    <string name="safe_login_password">Modify Login Password</string>
    <string name="safe_gesture">Gesture password</string>
    <string name="safe_french_password">Legal currency fund password</string>
    <string name="phone_prompt">Bind your cell phone number, make your account safer</string>
    <string name="phone_number">Cell phone number</string>
    <string name="phone_number_hint">Please enter your cell phone number</string>
    <string name="phone_code">Validate code</string>
    <string name="phone_code_hint">Please enter the verification code</string>
    <string name="phone_code_bt">Get the verification code</string>
    <string name="phone_finish">Complete</string>
    <string name="email_prompt">Once the mailbox is bound, it can not be modified, please fill in the real valid mailbox</string>
    <string name="email_emailaddress">Email Address</string>
    <string name="email_address_prompt">Please enter email address</string>
    <string name="email_code">Mailbox validation</string>
    <string name="email_code_hint">Please enter the verification code</string>
    <string name="email_code_bt">Get the verification code</string>
    <string name="email_phone_code">Cell phone verification</string>
    <string name="email_phone_code_hint">Please enter the verification code</string>
    <string name="email_phone_code_bt">Get the verification code</string>
    <string name="email_finish">Complete</string>
    <string name="password_old">Original Password</string>
    <string name="password_old_hint">Please enter the original password</string>
    <string name="password_new">New Password</string>
    <string name="password_new_hint">Please enter a new password</string>
    <string name="password_reput">Repeat password</string>
    <string name="password_reput_hint">Please repeat the new password</string>
    <string name="password_finish">Complete</string>
    <string name="sign_login">Security verification</string>
    <string name="sing_password">Login password</string>
    <string name="sing_password_hint">Please enter your login password</string>
    <string name="sing_finish">Determine</string>
    <string name="forget_number">Cell phone number</string>
    <string name="forget_number_hint">Please enter your cell phone number</string>
    <string name="forget_code">validate code</string>
    <string name="forget_code_hint">Please enter the verification code</string>
    <string name="forget_code_bt">Get the verification code</string>
    <string name="forget_next">Next</string>
    <string name="address_defaul">Default</string>
    <string name="address_edittext">Editor</string>
    <string name="address_delete">Delete</string>
    <string name="payway_card">Bank cards</string>
    <string name="payway_alpay">Alipay</string>
    <string name="payway_weixing">WeiXing</string>
    <string name="card_tv">Cardholder</string>
    <string name="card_name_hint">Please enter your name</string>
    <string name="card_number">Card number</string>
    <string name="card_number_hint">Please enter the card number</string>
    <string name="card_bank">Bank opening</string>
    <string name="card_bank_hint">Please enter the name of the account opening bank</string>
    <string name="card_address">Address of account opening</string>
    <string name="card_address_et">Please enter the account opening address(optional)</string>
    <string name="card_finish">Complete</string>
    <string name="pay_name">Name</string>
    <string name="pay_name_hint">Please enter your name</string>
    <string name="pay_number">Account number</string>
    <string name="pay_number_hint">Please enter an account number</string>
    <string name="pay_code_tv">Add 2D Code for Receipt(optional)</string>
    <string name="pay_finish">Complete</string>
    <string name="about_service">Online services</string>
    <string name="about_group">Join the community</string>
    <string name="about_version">Version Description</string>
    <string name="about_up">Version Update</string>
    <string name="group_qq">BattleWorld QQ Group</string>
    <string name="group_weixing">BattleWorld WeChat Group</string>
    <string name="group_dianbao">BattleWorld Telegraph Group</string>
    <string name="version_up_show">Is the latest version</string>
    <string name="system_language">Language Selection</string>
    <string name="system_refresh">Quotes refresh frequency</string>
    <string name="system_way">Method of valuation</string>
    <string name="system_clear">Clear Cache</string>
    <string name="system_back">Exit account</string>
    <string name="my_address">My address</string>
    <string name="head_change">Modify</string>
    <string name="head_user">Personal portrait</string>
    <string name="info_center">Personal Centre</string>
    <string name="name_change">Modify Nickname</string>
    <string name="pay_add">Add</string>
    <string name="pay_way">Mode of collection</string>
    <string name="persionality_change">Personality</string>
    <string name="sex_change">Revision of gender</string>
    <string name="zxing_code">My QR code</string>
    <string name="addaddress_title">Add Address</string>
    <string name="addgroup_title">Join the community</string>
    <string name="ailpay_title">Add Alipay</string>
    <string name="bindemail_title">Binding Mailbox</string>
    <string name="card_title">Add Bank Card</string>
    <string name="common_title">Real name authentication</string>
    <string name="forgetpassword_title">Forget the password</string>
    <string name="frenchpassword_title">Change the password</string>
    <string name="frenchpassword_right">Forget the password</string>
    <string name="language_title">Language Selection</string>
    <string name="loginpassword_title">Modify Login Password</string>
    <string name="payway_title">Selection</string>
    <string name="phonebind_title">Binding Cell Phone</string>
    <string name="resetpassword_title">Reset Fund Password</string>
    <string name="resetpassword_reset">Reset</string>
    <string name="service_title">Join the community</string>
    <string name="version_title">Version Description</string>
    <string name="weixing_title">Add WeChat</string>
    <string name="info_head">Head portrait</string>
    <string name="info_nickname">NickName</string>
    <string name="info_number">Accout</string>
    <string name="info_sex">Sex</string>
    <string name="info_personality">Individuality signature</string>
    <string name="info_code">My qr code</string>
    <string name="info_address">My address</string>
    <string name="addaddress_people">The contact</string>
    <string name="addaddress_name">Please enter name</string>
    <string name="addaddress_number">Mobile phone no</string>
    <string name="addaddress_number_hint">Please enter your phone number</string>
    <string name="addaddress_location">Select area</string>
    <string name="addaddress_location_hint">Please select the provincial district</string>
    <string name="addaddress_address">Detailed address</string>
    <string name="addaddress_address_hint">Please enter street number information</string>
    <string name="addaddress_finish">Complete</string>
    <string name="dialog_common">General market</string>
    <string name="dialog_real">Always real time</string>
    <string name="dialog_wifi">Real time only with WIFI</string>
    <string name="dialog_dismiss">Cancel</string>
    <string name="denominated_china">The yuan(CNY)</string>
    <string name="denominated_usa">The dollar(USD)</string>
    <string name="denominated_korea">The won(KRW)</string>
    <string name="denominated_japan">The Japanese yen(JPY)</string>
    <string name="denominated_europe">The euro(EUR)</string>
    <string name="denominated_ruble">The ruble(RUB)</string>
    <string name="denominated_pound">The pound(GBP)</string>
    <string name="dialog_clear_title">Confirm to clear the cache?</string>
    <string name="dialog_clear_context">Your usage record will be completely cleared</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_finish">Determine</string>
    <string name="note_title">Belonging to the node</string>
    <string name="note_count">Directly under the node</string>
    <string name="note_number">The total number of nodes：</string>
    <string name="feed_put_hint">Please input your Suggestions, your support is our forward momentum!</string>
    <string name="feed_put_image">Add pictures (no more than 3, no more)</string>
    <string name="feed_way_hint">Leave your contact information, mobile phone number, QQ, email can be ~</string>
    <string name="feed_show_title">Warm prompt</string>
    <string name="feed_way_show">Effective feedback or advice will get a gift from BattleWorld</string>
    <string name="feed_put">Submit</string>
    <string name="order_all">All</string>
    <string name="order_unpay">NotPaying</string>
    <string name="order_pay">Paying</string>
    <string name="order_complain">Complain</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_complete">Complete</string>
    <string name="identity_intermediate">Intermediate certification</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>
