<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_common"
        android:background="#ffffff"
        android:gravity="center"
        android:textColor="#0A1F37"
        android:text="@string/dialog_common"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="#0A1F37"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"/>
    <TextView
        android:id="@+id/dialog_real"
        android:background="#ffffff"
        android:gravity="center"
        android:textColor="#0A1F37"
        android:text="@string/dialog_real"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:background="#0A1F37"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"/>
    <TextView
        android:id="@+id/dialog_wifi"
        android:background="#ffffff"
        android:gravity="center"
        android:textColor="#0A1F37"
        android:text="@string/dialog_wifi"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center"
        android:textColor="@color/colorButtomTab"
        android:text="@string/dialog_dismiss"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>