<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/mipmap_background"
    android:layout_height="match_parent">
    <include layout="@layout/actionbar"></include>
    <TextView
        android:padding="5dp"
        android:layout_marginLeft="11dp"
        android:textSize="12sp"
        android:textColor="#657A90"
        android:text="@string/email_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="6dp"
                android:padding="15dp"
                android:textColor="@color/colorTitleText"
                android:textSize="16sp"
                android:text="@string/email_emailaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ui.widget.TextEditTextView
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:id="@+id/email_number"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email_address_prompt"
                android:textColorHint="@color/colorEditHint"/>
        </LinearLayout>
        <View
            android:layout_marginLeft="16dp"
            android:background="@color/colorview"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"></View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:textColor="@color/colorTitleText"
                android:textSize="16sp"
                android:padding="15dp"
                android:text="@string/email_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ui.widget.TextEditTextView
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:id="@+id/email_code_et"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email_code_hint"
                android:textColorHint="@color/colorEditHint"/>
            <Button
                android:id="@+id/email_code_bt"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/rectangle_shape"
                android:textColor="#ffffff"
                android:text="@string/email_code_bt"
                android:layout_width="80dp"
                android:layout_height="30dp" />
        </LinearLayout>
        <View
            android:layout_marginLeft="16dp"
            android:background="@color/colorview"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"></View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:textColor="@color/colorTitleText"
                android:textSize="16sp"
                android:padding="15dp"
                android:text="@string/email_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ui.widget.TextEditTextView
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:id="@+id/email_phone_code_et"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/email_phone_code_hint"
                android:textColorHint="@color/colorEditHint"/>
            <Button
                android:id="@+id/email_phone_code_bt"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="@drawable/rectangle_shape"
                android:textColor="#ffffff"
                android:text="@string/email_phone_code_bt"
                android:layout_width="80dp"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/email_finish"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:text="@string/email_finish"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#B3BAC9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>