<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@mipmap/mipmap_background">
    <include layout="@layout/actionbar"></include>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="16dp"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/password_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ui.widget.TextEditTextView
                android:id="@+id/reset_put"
                android:layout_marginLeft="16dp"
                android:textColorHint="@color/colorEditHint"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:hint="@string/password_new_hint"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@color/colorSafeText"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"></View>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="16dp"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:text="@string/password_reput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ui.widget.TextEditTextView
                android:id="@+id/reset_reput"
                android:textColorHint="@color/colorEditHint"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:hint="@string/password_new_hint"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/reset_bt"
        android:background="@color/colorEditHint"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:text="@string/resetpassword_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>